test/library/standard/List/listUpdateBadWorker.good
listUpdateBadWorker.chpl:11: In function 'test':
listUpdateBadWorker.chpl:16: error: `list.update()` failed to resolve method myWorker.this() for arguments (int(64), r)
